msg overflow issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,9 @@ p {
   align-items: center;
 }
 
+.message p {
+  word-break: break-word;
+}
 
 .sent {
   flex-direction: row-reverse;
